Added alt text  for images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="card">
 
-      <img class="card-image" src="./images/illustration-hero.svg"/>
+      <img class="card-image" alt="grrove" src="./images/illustration-hero.svg"/>
 
       <div class="card-title">Order Summary</div>
 
@@ -24,7 +24,7 @@
       </div>
 
       <div class="table">
-        <img class="icon-music-image" src="./images/icon-music.svg"/>
+        <img class="icon-music-image" alt="music-icon" src="./images/icon-music.svg"/>
         <div class="plan-text">Annual Plan<div class="annual-price">$59.99/year</div></div>
         <div class="change-button">Change</div>
       </div>
