Added h1 tag to title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <img class="card-image" alt="grrove" src="./images/illustration-hero.svg"/>
 
-      <div class="card-title">Order Summary</div>
+      <div class="card-title"><h1>Order Summary</h1></div>
 
       <div class="card-body">
         <p>
