--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Order summary card</title>
 </head>
 <body>
-
+<main>
   <div class="container">
     <div class="card">
 
@@ -49,5 +49,6 @@
     <br>
 
   <div>
+<main>    
 </body>
 </html>
